# BitSeq

./: DESCRIPTION  LICENSE  NAMESPACE  cleanup  configure  configure.ac
R/: estimateDE_call.R  estimateExpression_call.R  estimateHyperPar_call.R  estimateVBExpression_call.R  getDE.R  getExpression.R  getGeneExpression_call.R  getMeanVariance_call.R  getWithinGeneExpression_call.R  methods.R  methods_transcriptInfo.R  parseAlignment_call.R  tri_methods.R
inst/: CITATION  NEWS
inst/doc/: BitSeq.Rnw
inst/extdata/: data-c0b0.sam  data-c0b1.rpkm  data-c1b0.rpkm  data-c1b1.rpkm  ensSelect1.fasta  ensSelect1.tr  parameters1.txt
m4/: ac_openmp.m4
man/: BitSeq-package.Rd  estimateDE.Rd  estimateExpression.Rd  estimateHyperPar.Rd  estimateVBExpression.Rd  getDE.Rd  getExpression.Rd  getGeneExpression.Rd  getMeanVariance.Rd  loadSamples.Rd  parseAlignment.Rd  transcriptInfo.Rd  transcriptInfoFile.Rd
src/: ArgumentParser.cpp  ArgumentParser.h  Makevars  Makevars.common  Makevars.in  Makevars.win  Makevars.win.in  PosteriorSamples.cpp  PosteriorSamples.h  R_init_BitSeq.cpp  ReadDistribution.cpp  ReadDistribution.h  TranscriptInfo.cpp  TranscriptInfo.h  TranscriptSequence.cpp  TranscriptSequence.h  argumentParser.cpp  argumentParser.h  collapsedSampler.cpp  collapsedSampler.h  common.cpp  common.h  estimateDE.cpp  estimateExpression.cpp  estimateHyperPar.cpp  fileHeader.h  getGeneExpression.cpp  getVariance.cpp  getWithinGeneExpression.cpp  gibbsParameters.cpp  gibbsParameters.h  gibbsSampler.cpp  gibbsSampler.h  lowess.cpp  misc.cpp  misc.h  myTimer.h  parseAlignment.cpp  posteriorSamples.cpp  readDistribution.cpp  (+12 more)
vignettes/: BitSeq.Rnw
